# compatra

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
crates/compatra/: Cargo.toml
crates/compatra-arch/: Cargo.toml
crates/compatra-arch-arm64/: Cargo.toml
crates/compatra-arch-arm64/src/: lib.rs  stubs.rs
crates/compatra-arch/src/: lib.rs
crates/compatra-cli/: Cargo.toml
crates/compatra-cli/src/: main.rs
crates/compatra-cli/tests/: compat_mode_macos.rs
crates/compatra-runtime/: Cargo.toml
crates/compatra-runtime/src/: lib.rs
crates/compatra-runtime/src/macos/: imports.rs  macho_utils.rs  mod.rs  os.rs  stubs.rs  syscall.rs  syscall_plugins.rs
crates/compatra-runtime/src/macos/analysis_arm64/: cpp_imports.rs
crates/compatra-runtime/src/macos/arch_arm64/: binary_setup.rs  bootstrap.rs  compat_memory.rs  diagnostics.rs  dynamic_imports.rs  import_stubs.rs  io_imports.rs  process_imports.rs  pthread_imports.rs  runner.rs  runtime.rs  runtime_hooks.rs  state.rs  time_imports.rs
crates/compatra-runtime/src/macos/core/: analysis.rs  bootstrap.rs  compat.rs  emulation.rs  mode.rs  runner_plugins.rs  runtime_plugins.rs  trace.rs
crates/compatra-runtime/src/macos/guest_model/: files.rs  memory.rs  mod.rs
crates/compatra-runtime/src/macos/loader/: guest_libraries.rs  mod.rs
crates/compatra-runtime/src/macos/platform_apple/: imports.rs  runtime.rs
crates/compatra-threading/: Cargo.toml
crates/compatra/src/: aliases.rs  cxx.rs  filesystem.rs  identity.rs  lib.rs  logging.rs  mode.rs  network.rs  process.rs  report.rs
crates/machina-analysis/: Cargo.toml
crates/machina-analysis/src/: arm64_cpp_hooks.rs  capture.rs  guest_artifacts.rs  lib.rs  libcpp.rs  operator_hooks.rs  plugin_preset.rs  runtime_hooks.rs  service.rs
crates/machina-analysis/src/guest_model/: files.rs  memory.rs  mod.rs
crates/machina-arch/: Cargo.toml
crates/machina-arch-arm64/: Cargo.toml
crates/machina-arch-arm64/src/: abi.rs  decode.rs  lib.rs  pointer.rs
crates/machina-compat/: Cargo.toml
crates/machina-compat-cli/: Cargo.toml
crates/machina-compat-cli/src/: main.rs
crates/machina-compat-cli/tests/: compat_mode_macos.rs
crates/machina-compat/src/: cxx.rs  lib.rs
crates/machina-mode/: Cargo.toml
crates/machina-mode/src/: lib.rs
crates/machina-runtime/: Cargo.toml
crates/machina-runtime/src/: lib.rs  unicorn.rs
crates/machina-runtime/src/macos/: imports.rs  memory_arena.rs  mod.rs  policy.rs  syscall.rs  syscall_plugins.rs
crates/machina-runtime/src/macos/analysis_arm64/: cpp_imports.rs  noop_cpp_imports.rs
crates/machina-runtime/src/macos/arch_arm64/: binary_setup.rs  compat_memory.rs  diagnostics.rs  dynamic_imports.rs  import_stubs.rs  io_imports.rs  mod.rs  process_imports.rs  pthread_imports.rs  runner.rs  runtime.rs  runtime_hooks.rs  state.rs
crates/machina-runtime/src/macos/core/: analysis.rs  bootstrap.rs  byte_preview.rs  compat.rs  emulation.rs  mode.rs  plugin_events.rs  runner_support.rs
crates/machina-runtime/src/macos/events/: mod.rs
crates/machina-runtime/src/macos/guest_model/: files.rs  memory.rs  mod.rs
crates/machina-runtime/src/macos/loader/: command.rs  consts.rs  guest_images.rs  guest_libraries.rs  header.rs  mod.rs  parser.rs
crates/machina-runtime/src/macos/platform_apple/: imports.rs  runtime.rs
crates/machina-threading/: Cargo.toml
crates/machina-threading/src/: lib.rs
crates/machoscope/: Cargo.toml
crates/machoscope-analysis/: Cargo.toml
crates/machoscope-analysis/src/: capture.rs  lib.rs  libcpp.rs  operator_hooks.rs  runtime_hooks.rs  service.rs
crates/machoscope-analysis/src/guest_model/: files.rs
crates/machoscope/src/: lib.rs  main.rs
crates/machoscope/tests/: amos_private_access.rs  machoman_profile_strings.rs  rustdoor_fast_mode.rs
docs/: sample-status.md
fixtures/: README.md
scripts/ci/: check_amos_trace.ps1  check_amos_trace.py
src/: lib.rs  unicorn.rs
src/macos/: binary_bootstrap.rs  binary_setup.rs  bootstrap.rs  capture.rs  diagnostics.rs  emulation.rs  imports.rs  io_imports.rs  macho_utils.rs  mod.rs  os.rs  process_imports.rs  pthread_imports.rs  runner.rs  runner_plugins.rs  runner_support.rs  runtime.rs  runtime_hooks.rs  structs.rs  stubs.rs  syscall.rs  syscall_plugins.rs  time_imports.rs  trace.rs
src/macos/analysis_arm64/: cpp_imports.rs  mod.rs
src/macos/arch_arm64/: binary_setup.rs  bootstrap.rs  compat_memory.rs  cpp_imports.rs  diagnostics.rs  import_stubs.rs  io_imports.rs  mod.rs  process_imports.rs  pthread_imports.rs  runner.rs  runner_support.rs  runtime.rs  runtime_hooks.rs  state.rs  time_imports.rs
src/macos/core/: analysis.rs  capture.rs  compat.rs  emulation.rs  mod.rs  mode.rs  plugin_events.rs  plugins.rs  runner.rs  runner_plugins.rs  runner_support.rs  runtime.rs  runtime_plugins.rs
src/macos/guest_model/: analysis_artifacts.rs  files.rs  memory.rs  mod.rs
src/macos/loader/: command.rs  consts.rs  mod.rs  parser.rs
src/macos/platform_apple/: imports.rs  mod.rs  runtime.rs
tests/: amos_private_access.rs  compat_mode_macos.rs  machoman_profile_strings.rs  rustdoor_fast_mode.rs
