[package]
name = "machina"
version = "0.1.0"
edition = "2021"
description = "Machina - macOS-focused Mach-O emulation in Rust"
license = "GPL-2.0"
build = "build.rs"

[workspace]
members = [
    ".",
    "crates/machina-arch",
    "crates/machina-arch-arm64",
    "crates/machina-analysis",
    "crates/machina-compat",
    "crates/machina-mode",
]
resolver = "2"

[dependencies]
bitflags = "2"
thiserror = "1"
log = "0.4"
libc = "0.2"
byteorder = "1"
machina-analysis = { path = "crates/machina-analysis" }
machina-arch-arm64 = { path = "crates/machina-arch-arm64" }
machina-compat = { path = "crates/machina-compat" }
machina-mode = { path = "crates/machina-mode" }
unicorn-engine-sys = "2.1.5"
unicorn-engine = "2.1.5"


[lib]
name = "machina"
path = "src/lib.rs"
