[package]
name = "compatra-runtime"
version = "0.8.0"
edition = "2021"
description = "Compatra macOS arm64 emulation runtime"
license = "GPL-2.0"
build = "build.rs"

[features]
default = ["analysis"]
analysis = ["dep:machoscope-analysis"]

[dependencies]
bitflags = "2"
thiserror = "1"
log = "0.4"
libc = "0.2"
byteorder = "1"
machoscope-analysis = { path = "../machoscope-analysis", optional = true }
compatra-arch-arm64 = { path = "../compatra-arch-arm64" }
compatra = { path = "../compatra" }
compatra-threading = { path = "../compatra-threading" }
unicorn-engine-sys = "2.1.5"
unicorn-engine = "2.1.5"

[lib]
name = "compatra_runtime"
path = "src/lib.rs"
