[package]
name = "machina-compat-cli"
version = "0.5.0"
edition = "2021"
description = "Dedicated compatibility-mode CLI for Machina"
license = "GPL-2.0"

[features]
default = []

[dependencies]
machina-runtime = { path = "../machina-runtime", default-features = false }

[[bin]]
name = "machina-compat"
path = "src/main.rs"
