[package]
name = "machina-runtime"
version = "0.1.0"
edition = "2021"
description = "Machina macOS arm64 emulation runtime"
license = "GPL-2.0"
build = "build.rs"

[features]
default = ["analysis"]
analysis = ["dep:machina-analysis"]

[dependencies]
bitflags = "2"
thiserror = "1"
log = "0.4"
libc = "0.2"
byteorder = "1"
machina-analysis = { path = "../machina-analysis", optional = true }
machina-arch-arm64 = { path = "../machina-arch-arm64" }
machina-compat = { path = "../machina-compat" }
machina-mode = { path = "../machina-mode" }
machina-threading = { path = "../machina-threading" }
unicorn-engine-sys = "2.1.5"
unicorn-engine = "2.1.5"

[lib]
name = "machina_runtime"
path = "src/lib.rs"
